@@ -11,7 +11,8 @@
 19/12/2019
    - Updated create update user-group API (margaretha)
 20/12/2019
-   - Removed transactional annotations from simple select queries (margaretha)   
+   - Removed transactional annotations from simple select queries (margaretha)
+   - Updated free resource controller (margaretha)  
     
 # version 0.62.2
 17/10/2019
